monticore-generator/src/test/resources/cocos/invalid/A4025/A4025.mc4
package cocos.invalid.A4025;

grammar A4025 extends mc.grammars.types.TestTypes {
  QualifiedName =
          parts:StringLiteral;

}
